fix update-impact plugin for Pull Requests if statement
See also: https://docs.travis-ci.com/user/environment-variables/#convenience-variables

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ jdk:
 
 install: true
 script:
-   - if [ "$TRAVIS_PULL_REQUEST" == "true" ]; then
+   - if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then
       ./mvnw test -DskipAssembly;
     else
       ./mvnw test -DskipAssembly -Dupdate-impact;
