--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,14 @@ jdk:
 install: true
 script:
    - if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then
-      ./mvnw test -DskipAssembly;
+      ./mvnw test -DskipAssembly -B;
     else
-      ./mvnw test -DskipAssembly -Dupdate-impact;
+      ./mvnw test -DskipAssembly -Dupdate-impact -B;
     fi;
 after_success:
   # TODO delete following if statement after fix of https://github.com/cobertura/cobertura/issues/271
   - if [ "$TRAVIS_JDK_VERSION" == "openjdk8" ] || [ "$TRAVIS_JDK_VERSION" == "oraclejdk8" ]; then
-      mvn cobertura:cobertura org.eluder.coveralls:coveralls-maven-plugin:report -Ptravis-coveralls -DskipAssembly;
+      mvn cobertura:cobertura org.eluder.coveralls:coveralls-maven-plugin:report -Ptravis-coveralls -DskipAssembly -B;
     else
       echo "Not reporting coverage for $TRAVIS_JDK_VERSION due to incompatibility or to save performance";
     fi;
