--- a/bundles/pom.xml
+++ b/bundles/pom.xml
@@ -29,7 +29,7 @@
 
     <artifactId>struts2-osgi-bundles</artifactId>
     <packaging>pom</packaging>
-    <name>Struts OSGi Bundles</name>
+    <name>Struts 2 OSGi Bundles</name>
 
     <modules>
         <module>admin</module>
