Update Embedded JSP Plugin to utilize the most current Tomcat Juli/Jasper still compatible with JDK 7. - Replaced AnnotationHelper with InstanceHelper due to removal of AnnotationProcessor in Tomcat 7+. - Tomcat Juli/Jasper Maven artifact ids changed with Tomcat 7+. - Addition of tomcat-api dependency due to changes in Jasper for Tomcat 7+. - Applied changes to embedded plugin modules required due to Jasper API changes. - Additional unit tests for better test coverage.

--- a/plugins/embeddedjsp/pom.xml
+++ b/plugins/embeddedjsp/pom.xml
@@ -68,7 +68,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat</groupId>
-            <artifactId>juli</artifactId>
+            <artifactId>tomcat-juli</artifactId>
         </dependency>
         <dependency>
             <groupId>taglibs</groupId>
@@ -82,7 +82,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat</groupId>
-            <artifactId>jasper</artifactId>
+            <artifactId>tomcat-jasper</artifactId>
             <scope>provided</scope>
         </dependency>
 
