Switch to Java 8

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
 
         <spring.platformVersion>4.3.20.RELEASE</spring.platformVersion>
         <ognl.version>3.2.10</ognl.version>
@@ -394,8 +395,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
             <plugin>
