--- a/pom.xml
+++ b/pom.xml
@@ -1098,6 +1098,12 @@
                 <version>2.10.0</version>
                 <scope>test</scope>
             </dependency>
+            
+            <dependency>
+		        <groupId>org.springframework</groupId>
+		        <artifactId>spring-web</artifactId>
+		        <version>3.1.1.RELEASE</version>
+	        </dependency>
 
         </dependencies>
     </dependencyManagement>
