--- a/pom.xml
+++ b/pom.xml
@@ -1104,6 +1104,11 @@
 		        <artifactId>spring-web</artifactId>
 		        <version>3.1.1.RELEASE</version>
 	        </dependency>
+	    <dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-web</artifactId>
+		<version>1.4.0.RELEASE</version>
+	    </dependency>
 
         </dependencies>
     </dependencyManagement>
