Add maven enforce plugin with rule to avoid dependency convergence issues
https://issues.apache.org/jira/browse/WW-5018

--- a/pom.xml
+++ b/pom.xml
@@ -389,6 +389,24 @@
                         <skipRuntimeScope>true</skipRuntimeScope>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-enforcer-plugin</artifactId>
+                    <version>3.0.0-M2</version>
+                    <executions>
+                        <execution>
+                            <id>enforce</id>
+                            <configuration>
+                                <rules>
+                                    <dependencyConvergence />
+                                </rules>
+                            </configuration>
+                            <goals>
+                                <goal>enforce</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
             </plugins>
         </pluginManagement>
 
