--- a/core/src/main/resources/org/apache/struts2/default.properties
+++ b/core/src/main/resources/org/apache/struts2/default.properties
@@ -203,6 +203,9 @@ struts.xslt.nocache=false
 ### Whether to always select the namespace to be everything before the last slash or not
 struts.mapper.alwaysSelectFullNamespace=false
 
+### Whether to allow static field access in OGNL expressions or not
+struts.ognl.allowStaticFieldAccess=true
+
 ### Whether to allow static method access in OGNL expressions or not
 struts.ognl.allowStaticMethodAccess=false
 
