--- a/pom.xml
+++ b/pom.xml
@@ -1069,11 +1069,13 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>1.7.26</version>
+                <optional>true</optional>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-simple</artifactId>
                 <version>1.7.26</version>
+                <optional>true</optional>
             </dependency>
 
             <dependency>
