WW-5041 Upgrade to OGNL 3.1.26 and adapt to its new features
(cherry picked from commit 1de94b2)

--- a/core/src/main/resources/org/apache/struts2/default.properties
+++ b/core/src/main/resources/org/apache/struts2/default.properties
@@ -223,4 +223,8 @@ struts.ognl.enableExpressionCache=true
 ### Indicates if Dispatcher should handle unexpected exceptions by calling sendError()
 ### or simply rethrow it as a ServletException to allow future processing by other frameworks like Spring Security
 struts.handle.exception=true
+
+### applies maximum length allowed on OGNL expressions for security enhancement
+struts.ognl.expressionMaxLength=200
+
 ### END SNIPPET: complete_file
