--- a/pom.xml
+++ b/pom.xml
@@ -98,18 +98,16 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
 
-        <spring.platformVersion>4.3.24.RELEASE</spring.platformVersion>
+        <spring.platformVersion>4.3.25.RELEASE</spring.platformVersion>
         <ognl.version>3.2.10</ognl.version>
         <asm.version>7.1</asm.version>
         <tiles.version>3.0.8</tiles.version>
         <tiles-request.version>1.0.7</tiles-request.version>
-        <log4j2.version>2.11.1</log4j2.version>
-        <jackson.version>2.9.9</jackson.version>
-        <!-- FIXME: drop once a new 2.9.10 will be out and all packages will be in sync -->
-        <jackson-databind.version>2.9.9.3</jackson-databind.version>
+        <log4j2.version>2.12.1</log4j2.version>
+        <jackson.version>2.9.10</jackson.version>
 
         <!-- Site generation -->
-        <fluido-skin.version>1.7</fluido-skin.version>
+        <fluido-skin.version>1.8</fluido-skin.version>
 
         <!-- Sonar -->
         <sonar.host.url>https://builds.apache.org/analysis/</sonar.host.url>
@@ -1070,12 +1068,12 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>1.7.26</version>
+                <version>1.7.28</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-simple</artifactId>
-                <version>1.7.26</version>
+                <version>1.7.28</version>
             </dependency>
 
             <dependency>
@@ -1136,7 +1134,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson-databind.version}</version>
+                <version>${jackson.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.dataformat</groupId>
@@ -1149,7 +1147,7 @@
             <dependency>
                 <groupId>org.codehaus.woodstox</groupId>
                 <artifactId>stax2-api</artifactId>
-                <version>4.1</version>
+                <version>4.2</version>
             </dependency>
 
             <dependency>
