--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
         <tiles.version>3.0.8</tiles.version>
         <tiles-request.version>1.0.7</tiles-request.version>
         <log4j2.version>2.12.1</log4j2.version>
-        <jackson.version>2.9.10</jackson.version>  <!-- 2.9.10 contains the 2.9.9.x jackson-databind fixes -->
+        <jackson.version>2.9.10</jackson.version>
 
         <!-- Site generation -->
         <fluido-skin.version>1.8</fluido-skin.version>
