--- a/pom.xml
+++ b/pom.xml
@@ -98,14 +98,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
 
-        <spring.platformVersion>4.3.25.RELEASE</spring.platformVersion>
-        <ognl.version>3.2.10</ognl.version>
+        <!-- dependency versions in alphanumeric order -->
         <asm.version>7.1</asm.version>
+        <jackson.version>2.10.0</jackson.version>
+        <log4j2.version>2.12.1</log4j2.version>
+        <ognl.version>3.2.10</ognl.version>
+        <slf4j.version>1.7.28</slf4j.version>
+        <spring.platformVersion>4.3.25.RELEASE</spring.platformVersion>
         <tiles.version>3.0.8</tiles.version>
         <tiles-request.version>1.0.7</tiles-request.version>
-        <log4j2.version>2.12.1</log4j2.version>
-        <jackson.version>2.10.0</jackson.version>
-        <slf4j.version>1.7.28</slf4j.version>
 
         <!-- Site generation -->
         <fluido-skin.version>1.8</fluido-skin.version>
