--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -30,7 +30,7 @@
     </parent>
 
     <artifactId>struts2-bom</artifactId>
-    <version>2.5.21-SNAPSHOT</version>
+    <version>2.5.21</version>
     <packaging>pom</packaging>
 
     <name>Struts 2 Bill of Materials</name>
@@ -45,7 +45,7 @@
     </licenses>
 
     <properties>
-        <struts-version.version>2.5.21-SNAPSHOT</struts-version.version>
+        <struts-version.version>2.5.21</struts-version.version>
         <maven.site.skip>true</maven.site.skip>
         <maven.site.deploy.skip>true</maven.site.deploy.skip>
     </properties>
@@ -181,6 +181,6 @@
     </dependencyManagement>
 
   <scm>
-    <tag>STRUTS_2_5_16</tag>
+    <tag>STRUTS_2_5_21</tag>
   </scm>
 </project>
