--- a/core/pom.xml
+++ b/core/pom.xml
@@ -36,7 +36,7 @@
         <tlib.version>2.3</tlib.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
+<!-- romsky 
     <build>
         <plugins>
             <plugin>
@@ -71,7 +71,7 @@
             </plugin>
         </plugins>
     </build>
-
+-->
     <profiles>
         <profile>
             <id>alljars</id>
