--- a/plugins/dojo/pom.xml
+++ b/plugins/dojo/pom.xml
@@ -82,7 +82,7 @@
         <tlib.version>2.2</tlib.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
+<!-- romsky
     <build>
         <plugins>
             <plugin>
@@ -121,7 +121,7 @@
             </plugin>
         </plugins>
     </build>
-
+romsky -->
     <dependencies>
 
         <!-- JSP API -->
