WW-5047 Upgrades to VelocityEngine 2.1 and VelocityTools 3.0

--- a/plugins/velocity/pom.xml
+++ b/plugins/velocity/pom.xml
@@ -36,12 +36,17 @@
         <!-- Velocity -->
         <dependency>
             <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity</artifactId>
+            <artifactId>velocity-engine-core</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity-tools</artifactId>
+            <groupId>org.apache.velocity.tools</groupId>
+            <artifactId>velocity-tools-view</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.velocity.tools</groupId>
+            <artifactId>velocity-tools-view-jsp</artifactId>
         </dependency>
 
         <dependency>
