--- a/bundles/demo/pom.xml
+++ b/bundles/demo/pom.xml
@@ -34,14 +34,8 @@
     <dependencies>
        
         <dependency>
-            <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity-tools</artifactId>
-            <optional>true</optional>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-velocity-plugin</artifactId>
         </dependency>
 
         <dependency>
