Proposed implementation to address WW-5030. Introduce new junit-portlet plugin. - Utilizes a copy of org.springframework.mock.web.portlet package from   Spring 4.3.x, refactored to org.apache.struts2.mock.web.portlet.  Also   copies one interface from org.apache.struts2.mock.web.portlet.  The   package-info.java files identify the package renaming. - Provides test cases for the mock objects. - Modifies the portlet plugin to use the junit-portlet plugin as a   dependency.  Adds a small boundary case fix for PortletRequestMap.

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -45,6 +45,7 @@
         <module>jfreechart</module>
         <module>json</module>
         <module>junit</module>
+        <module>junit-portlet</module>
         <module>osgi</module>
         <module>oval</module>
         <module>pell-multipart</module>
