Correction for previous commit message.  There was a typo which should have   read: "copies one interface from   org.springframework.mock.web.portlet.multipart" (not   "org.apache.struts2.mock.web.portlet" which was incorrect).
Refactor (rename) junit-portlet plugin to portlet-mocks plugin.
- Moved StrutsPortletTestCase from the portlet plugin into the junit plugin
 (same package name).
- Added optional dependencies to the junit plugin for the portlet plugin
  and mocks plugin.
- Duplicated StrutsTestCase from the junit plugin with a new name
  StrutsTestCasePortletTests that exists within a test scope only.
  This was done to eliminate a dendency cycle between junit and portlet
  plugins during refactoring.
- Updated the portlet plugin unit tests to use StrutsTestCasePortletTests
  internally instead of StrutsTestCase from the junit plugin.
- Removed junit plugin dependency for portlets plugin, added test scope
  dependency for portlet-mocks plugin.
- Made StrutsSpringPortletMockObjectsTest depend only on TestCase.
- Removed unneeded dependencies from portlet-mocks pom.

Amended commit multiple times: Missed plugins pom.xml change, forgot to
drop StrutsPortletTestCase from portlet plugin (local repository).

--- a/plugins/junit/pom.xml
+++ b/plugins/junit/pom.xml
@@ -70,7 +70,20 @@
         <dependency>
             <groupId>javax.portlet</groupId>
             <artifactId>portlet-api</artifactId>
-            <scope>test</scope>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-portlet-plugin</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-portlet-mocks-plugin</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <!-- The Servlet API mocks in Spring Framework 4.x only supports Servlet 3.0 and higher.
