--- a/pom.xml
+++ b/pom.xml
@@ -1112,7 +1112,7 @@
 
             <dependency>
                 <groupId>org.jboss.weld.se</groupId>
-                <artifactId>weld-se-core</artifactId>
+                <artifactId>weld-se</artifactId>
                 <version>2.2.16.SP1</version>
             </dependency>
 
