Proposed WW-5068 change. ------ Proposed list of library version updates: ---     cdi-api 1.0-SP4 -> 1.2     weld-core 1.0.1-SP4 -> 2.2.16.SP1     weld-se 1.0.1-Final -> weld-se-core 2.2.16.SP1     htmlunit 2.27.0 and 2.37.0 -> 2.39.0     slf4j-api 1.7.29 -> 1.7.30     slf4j-simple 1.7.29 -> 1.7.30     log4j2 2.12.1 - > 2.13.1     jackson 2.10.1 -> 2.10.3     ognl 3.2.12 -> 3.2.14     asm 7.2 -> 7.3.1     spring 4.3.25.RELEASE -> 4.3.26.RELEASE     fluido-skin 1.8 -> 1.9     freemarker 2.3.28 -> 2.3.30     org.apache.felix.main 4.6.1 -> 6.0.3     velocity 2.1 -> 2.2     junit 4.12 -> 4.13     easymock 3.5.1 -> 4.2     javax.el 3.0.1-b10 -> 3.0.1-b11     jstl 1.1.2 -> 1.2     tomcat-jasper 8.5.37 -> 8.5.53     tomcat-api 8.5.37 -> 8.5.53     tomcat-juli 8.5.37 -> 8.5.53     commons-lang3 3.9 -> 3.10     assertj-core 2.9.1 -> 3.15.0     mockito-core 2.23.0 -> 3.3.3   (required exclusion for objenesis)     testng 5.14.10 -> 7.1.0     juneau-marshall 7.2.2 -> 8.1.3     validation-api 1.1.0.Final -> 2.0.1.Final     hibernate-validator 5.4.3.Final -> 6.1.2.Final     jaxb-impl 2.3.1 -> 2.3.2 --- Proposed list of Maven plugin version updates: ---     maven-project-info-reports-plugin 2.7 -> 3.0.0     updateimpact-maven-plugin 1.0.10 -> 1.0.12     maven-surefire-plugin 2.22.2 -> 3.0.0-M4     jacoco-maven-plugin 0.8.4 - > 0.8.5     maven-war-plugin 3.2.2 -> 3.2.3     maven-bundle-plugin 3.5.0 -> 4.2.1     maven-dependency-plugin 3.1.1 -> 3.1.2     dependency-check-maven 5.2.4 -> 5.3.2     maven-enforcer-plugin 3.0.0-M2 -> 3.0.0-M3     maven-failsafe-plugin 2.22.2 -> 3.0.0-M4     maven-site-plugin 3.8.2 -> 3.9.0     doxia-core 1.9 -> 1.9.1     doxia-module-markdown 1.9 -> 1.9.1 ---

--- a/plugins/cdi/pom.xml
+++ b/plugins/cdi/pom.xml
@@ -47,7 +47,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jboss.weld</groupId>
+            <groupId>org.jboss.weld.se</groupId>
             <artifactId>weld-se</artifactId>
             <scope>test</scope>
         </dependency>
