Initial attempt to fix OSGi Plugin issues discovered during examination of WW-5075. - Indication is that the OSGi Plugin has been failing since Struts 2.3.4. - Applied fix to ResourceFinder to restore 2.3.x logic that was broken in   2.5.x. - Implemented changes to restore OSGi Plugin functionality for 2.5.x. - Applied changes to the OSGi Admin Bundle to function under 2.5.x. - Updated the OSGi Admin Bundle JS libraries and related CSS to newer   versions. - Added new unit tests for the OSGi plugin. - The OSGi plugin will only function properly with exploded/expanded WAR   files.

--- a/plugins/osgi/src/main/resources/struts-osgi.properties
+++ b/plugins/osgi/src/main/resources/struts-osgi.properties
@@ -17,7 +17,7 @@
 # under the License.
 #
 scanning.package.includes = com.opensymphony.xwork2, \
-                            org.apache.commons.lang.xwork, \
+                            org.apache.commons.lang3, \
                             org.apache.struts2, \
                             ognl, \
                             freemarker, \
