Initial attempt to fix OSGi Plugin issues discovered during examination of WW-5075. - Draws on PR#427 and utilizes similar code, but updated for JDK8. - Updated OSGi plugin dependencies to OSGi R7. - Indication is that the OSGi Plugin has been failing since Struts 2.3.4. - Applied fix to ResourceFinder to restore 2.3.x logic that was broken in   2.5.x. - Implemented changes to restore OSGi Plugin functionality for 2.6.x. - Applied changes to the OSGi Admin Bundle to function under 2.6.x. - Applied changes to the OSGi Demo Bundle to function under 2.6.x. - Updated the OSGi Admin Bundle JS libraries and related CSS to newer   versions. - Added new unit tests for the OSGi plugin. - The OSGi plugin will only function properly with exploded/expanded WAR   files. - BundlePackageLoader changes suggested by L. Lenart (from PR#427). - FelixOsgiHost changes to better handle Felix bundle cache location   processing (Windows and Linux). - FelixOsgIHost test modified to not fail if felix-cache directory   cannot be created (warn only) to avoid failing the whole build. - FelixOsgIHost test modified to not fail if felix-cache directory   bundle load issues arise (warn only) to avoid failing the whole build.

--- a/bundles/admin/pom.xml
+++ b/bundles/admin/pom.xml
@@ -48,7 +48,7 @@
                     <instructions>
                         <manifestLocation>META-INF</manifestLocation>
                         <Struts2-Enabled>true</Struts2-Enabled>
-                        <Import-Package>*,com.opensymphony.xwork2</Import-Package>
+                        <Import-Package>*</Import-Package>
                         <Export-Package>org.apache.struts2.osgi.admin*</Export-Package>
                         <Spring-Context>*;create-asynchronously:=false</Spring-Context>
                     </instructions>
