--- a/plugins/osgi/src/main/resources/struts-osgi.properties
+++ b/plugins/osgi/src/main/resources/struts-osgi.properties
@@ -17,10 +17,10 @@
 # under the License.
 #
 scanning.package.includes = com.opensymphony.xwork2, \
-                            org.apache.commons.lang.xwork, \
+                            org.apache.commons.lang3, \
                             org.apache.struts2, \
                             ognl, \
                             freemarker, \
                             org.apache.velocity, \
-                            javax.servlet;2.4
+                            javax.servlet;2.5
 
